Fix comma spacing around publication contributor list items

--- a/assets/styles/pubswh/main.css
+++ b/assets/styles/pubswh/main.css
@@ -456,7 +456,8 @@ dl#contributors .clear {
 }
 dl#contributors .contributor {
   display: inline-block;
-  white-space:nowrap;
+  white-space: nowrap;
+  padding: 0 .25em;
 }
 dl#contributors .contributor i.ai-orcid {
   color: #A6CE39;
